# stromteilung

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  heroku.yml  index.html  nginx-entrypoint.sh  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  heroku.yml  pyproject.toml  render.yaml
backend/app/: main.py
backend/app/controllers/: auth.py  health.py  inquiries.py  listings.py  ratings.py  sellers.py  transformers.py  users.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260525_1038_220b1de397e4_initial_users_refresh_tokens.py  20260525_1100_7be0c5635862_m3_transformers_profiles_listings_.py  20260525_1120_dc3903eb1508_data_lowercase_role_and_locale_values.py  20260531_1200_a1b2c3d4e5f6_listings_add_address_transformer.py  20260531_1300_b2c3d4e5f6a7_listings_add_geo.py  (+2 more)
backend/app/middleware/: request_id.py
backend/app/models/: __init__.py  inquiry.py  listing.py  profile.py  rating.py  refresh_token.py  transformer.py  user.py
backend/app/repositories/: base.py  inquiry_repo.py  listing_repo.py  profile_repo.py  rating_repo.py  refresh_token_repo.py  transformer_repo.py  user_repo.py
backend/app/schemas/: auth.py  listing.py  marketplace.py  user.py
backend/app/services/: auth_service.py  geo_service.py  transformer_service.py
src/: App.tsx  (+1 more)
(+50 files in other folders)
